syntax = "proto3";

package users.account.v1;
option go_package = "account/v1;accountv1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (Account);
  rpc GetAccountById (GetAccountByIdRequest) returns (Account);
  rpc GetAccountByEmail (GetAccountByEmailRequest) returns (Account);
  rpc DeleteAccount (DeleteAccountRequest) returns (google.protobuf.Empty);
}

message Account {
  string id = 1; // uuid
  string email = 2;
  string username = 3;
  bool email_verified = 4;
  bool archived = 5;
  google.protobuf.Timestamp created_time = 50;
  google.protobuf.Timestamp updated_time = 51;
}

message GetAccountByIdRequest {
  string account_id = 1;
}

message GetAccountByEmailRequest {
  string email = 1;
}

message CreateAccountRequest {
  string email = 1; // required
  string username = 2; // required
  string password = 3; // required
}

message DeleteAccountRequest {
  string account_id = 1;
}